[gd_scene load_steps=4 format=3 uid="uid://b5eaerqhga3uc"]

[ext_resource type="Script" path="res://Leaderboard/leaderboard.gd" id="1_olo6w"]
[ext_resource type="Texture2D" uid="uid://dy613m40vauyo" path="res://assets/old/Inventory/Inventory_background.png" id="1_p6gmm"]
[ext_resource type="PackedScene" uid="uid://dgygkbtm0burn" path="res://addons/quiver_leaderboards/leaderboard_ui.tscn" id="2_7jlmc"]

[node name="leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olo6w")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p6gmm")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -156.0
offset_right = -109.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_menu_button" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Back to Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -34.0
offset_right = 148.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="name_input" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/minimum_character_width = 9
placeholder_text = "Name..."

[node name="Score_input" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/minimum_character_width = 9
placeholder_text = "Score..."

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 45.0
offset_right = 74.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Submit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit Score"

[node name="Leaderboard_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LeaderBoard
"

[node name="LeaderboardUI" parent="." instance=ExtResource("2_7jlmc")]
visible = false
layout_mode = 1
leaderboard_id = "sih-2024-main-ZBI8"

[node name="Exit Button" type="Button" parent="LeaderboardUI"]
layout_mode = 1
offset_left = 8.0
offset_top = 10.0
offset_right = 52.0
offset_bottom = 28.0
text = "Exit"

[connection signal="pressed" from="HBoxContainer2/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="text_submitted" from="HBoxContainer/name_input" to="." method="_on_name_input_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer/Score_input" to="." method="_on_score_input_text_submitted"]
[connection signal="pressed" from="VBoxContainer/Submit_button" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard_button" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="LeaderboardUI/Exit Button" to="." method="_on_exit_button_pressed"]
